test/conformance/chainsaw/mutating-admission-policy-reports/background/with-binding-fail/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: with-binding-fail
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: configmap.yaml
    - assert:
        file: configmap.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy.yaml
  - name: step-03
    try:
    - sleep:
        duration: 10s
  - name: step-04
    try:
    - assert:
        file: report-assert.yaml
